<resources>
    <string name="app_name">Ui</string>

    <string name="qlassified_storage_name">Qlassified_pass</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirm">Password confirm</string>
    <string name="login_email">Email</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_skip">Skip</string>
    <string name="action_log_out">Log out</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_email">Not valid email</string>
    <string name="error_invalid_password_confirmation">Passwords are not the same</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username_or_pass">Wrong username or password</string>
    <string name="error_invalid_register_data">Wrong data, try again</string>
    <!---->

    <string name="splash_screen">Splash screen</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="movie">movie</string>
    <string name="tv_show">TV show</string>
    <string name="tv_episode">TV Episode</string>
    <string name="people">People</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="rated">Rated</string>
    <string name="lists">Lists</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="account_details">Account Details</string>

    <string name="more">More</string>
    <string name="more_types">SHOW OTHER TYPES</string>
    <string name="popular_movies">Popular movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="top_rated_movies">Top rated movies</string>

    <string name="tv_shows">TV shows</string>
    <string name="popular_tv_shows">Popular TV shows</string>
    <string name="top_rated_tv_shows">Top rated TV shows</string>
    <string name="airing_today_tv_shows">Airing today TV shows</string>
    <string name="on_the_air_tv_shows">On the air TV shows</string>
    <string name="current_season">Current season</string>
    <string name="reviews">Reviews</string>

    <plurals name="age">
        <item quantity="one">%d year</item>
        <item quantity="many">%d years</item>
    </plurals>

    <plurals name="episodes">
        <item quantity="one">%d Episode</item>
        <item quantity="other">%d Episodes</item>
    </plurals>

    <string name="run_time">%s min</string>
    <string name="photo_index">%d of %d</string>

    <string name="show_all">SHOW ALL</string>
    <string name="show_details">SHOW DETAILS</string>
    <string name="tags">Tags</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="release_information">Release information</string>
    <string name="top_billed_cast">Top billed cast</string>
    <string name="gallery">Gallery</string>
    <string name="known_for">Known for</string>
    <string name="recommendations">Recommendations</string>
    <string name="episodes">Episodes</string>
    <string name="regular_actors">Regular actors</string>

    <string name="Premiere">Premiere</string>
    <string name="Theatrical_limited">Theatrical (limited)</string>
    <string name="Theatrical">Theatrical</string>
    <string name="Digital">Digital</string>
    <string name="Physical">Physical</string>
    <string name="TV">TV</string>

    <!--tv episode-->
    <string name="season_and_episode">Season %d Episode %d</string>
    <string name="directed_by">Directed by</string>
    <string name="written_by">Written by</string>
    <string name="guest_stars">Guest stars</string>

    <!--actor credits-->
    <string name="year">year</string>
    <string name="acting">acting</string>
    <string name="role">role</string>

    <string name="no_connection_to_internet">No connection to internet</string>
    <string name="not_found_error">Internet resource not found</string>
    <string name="not_authorized">Authorisation error</string>

    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="submit">Submit</string>

    <string name="no_season_description">We don\'t have an overview for this season.</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="special_season">Specials</string>
    <string name="season_name">Season %d</string>

    <!--settings screen-->
    <string name="category_images">Images</string>

    <string name="backdrop_size">Backdrop size</string>
    <string name="logo_size">Logo size</string>
    <string name="poster_size">Poster size</string>
    <string name="profile_size">Profile size</string>
    <string name="still_size">Still size</string>

    <string name="default_value">original</string>

    <!--search screen-->
    <string name="search_movie">@string/movie</string>
    <string name="search_tv_show">@string/tv_show</string>
    <string name="search_people">people</string>

    <string name="remember_me">Remember me</string>
    <string name="confirmation_message">Check your Email and Sign In</string>

    <!--rate view-->
    <string name="rate_this">Rate this %s</string>
    <string name="already_rated">Thank you for your mark</string>
    <string name="rate">RATE</string>
    <string name="delete_rating">DELETE RATING</string>

    <string name="add_to_list">Add to your list</string>
    <string name="remove_favorite">Remove from favorite list</string>
    <string name="add_favorite">Mark as favorite</string>
    <string name="remove_watchlist">Remove from watchlist</string>
    <string name="add_watchlist">Add to watchlist</string>
    <string name="favorite_added">Added to favorite list</string>
    <string name="favorite_removed">Removed from favorite list</string>
    <string name="watchlist_added">Added to watchlist</string>
    <string name="watchlist_removed">Removed from watchlist</string>

    <!--Transitions-->
    <string name="avatarTransition">AVATAR_TRANSITION</string>
    <string name="usernameTransition">USERNAME_TRANSITION</string>
    <string name="navigationBarTransition">NAVIGATION_BAR_TRANSITION</string>
    <string name="signInButtonTransition">SIGN_IN_BUTTON_TRANSITION</string>

    <string name="movie_media_type">@string/movie</string>
    <string name="tv_media_type">tv</string>

    <!--home fragments-->
    <string name="nothing_to_show">Nothing to show</string>

    <string name="rated_movies">Rated movies</string>
    <string name="rated_tv_shows">Rated TV shows</string>

    <string name="watchlist_movies">Watchlist movies</string>
    <string name="watchlist_tv_shows">Watchlist TV shows</string>

    <string name="favorite_movies">Favorite movies</string>
    <string name="favorite_tv_shows">Favorite TV shows</string>

    <!--lists activity-->
    <plurals name="item_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="favorite_count">
        <item quantity="one">%d favorite</item>
        <item quantity="other">%d favorites</item>
    </plurals>
    <string name="add_to_one_of_your_lists">Add movie to your lists…</string>
    <string name="delete_list">DELETE LIST</string>

    <string name="list_created">Success: List created</string>
    <string name="list_create_error">Error: Could not create list</string>
    <string name="list_deleted">Success: List deleted</string>
    <string name="list_delete_error">Error: Could not delete list</string>
    <string name="item_added">Success: Item added</string>
    <string name="item_add_error">Error: This item is already on the list</string>
    <string name="item_removed">Success: Item removed</string>
    <string name="item_remove_error">Error: Could not remove this movie</string>
    <string name="tv_remove_error">Sorry, we can not remove TV shows</string>
    <string name="lists_num_out_of_bounds_error">Sorry, you can not create more than 20 lists</string>
    <string name="no_lists_error">You have not created any lists</string>
    <string name="no_media_error">You have not added any movies yet</string>

    <string name="list_add_movie">Add movie</string>
    <string name="list_delete">Delete this list</string>

    <!--list dialog-->
    <string name="create_new_list">Create new list</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>

    <string name="delete_list_title">Are you sure?</string>
    <string name="delete_list_message">By clicking delete, this list will be permanently deleted.</string>
    <string name="not_found">Not found</string>
    <string name="try_global_search">TRY GLOBAL SEARCH</string>

</resources>
