<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/icon_movie"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_TVset"
            android:icon="@drawable/icon_tv_set"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/icon_people"
            android:title="@string/people" />
    </group>

    <group
        android:id="@+id/account_group"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/icon_menu_watchlist"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/icon_menu_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_rated"
            android:icon="@drawable/icon_menu_star"
            android:title="@string/rated" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/icon_menu_lists"
            android:title="@string/lists" />
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
    </group>

</menu>